learn event handling and modifier

--- a/hello.html
+++ b/hello.html
@@ -30,6 +30,6 @@
     </div>
 
     <script src="https://unpkg.com/vue@3"></script>
-    <script src="hello.js"></script>
+    <script src="js/hello.js"></script>
 </body>
 </html>
